infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      volumes:
        - name: mongodb-data
          hostPath:
            path: /tmp/mongodb
      containers:
        - name: auth-mongo
          image: mongo
          volumeMounts:
             - name: mongodb-data
               mountPath: /data/db


---
apiVersion: v1
kind: Service
metadata: 
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
